# aform-rs

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  index.html  mkdocs.yml  pixi.toml  search.json  sitemap.xml
.github/workflows/: pages.yml  release.yml
configuration/: index.html
docs/: index.md  installation.md  usage.md
docs/tapes/: editor.tape  file-browser.tape  readme.tape
examples/: cluster_test.stk  multi_msa.stk  protein.stk
installation/: index.html
search/: search_index.json
src/: app.rs  clustering.rs  config.rs  input.rs  main.rs  svg.rs  ui.rs
src/color/: schemes.rs  theme.rs
src/editor/: commands.rs  history.rs
src/stockholm/: parser.rs  types.rs  writer.rs
src/structure/: mod.rs  pairs.rs  parser.rs
tapes/: annotation-bars.tape  clustering.tape  color-schemes.tape  editor-static.tape  protein.tape  readme.tape  structure-coloring.tape  visual-mode.tape
usage/: index.html
