[package]
name = "aform-rs"
version = "0.1.0"
edition = "2024"
description = "Terminal Stockholm alignment editor inspired by Emacs ralee mode"
license = "MIT"
repository = "https://github.com/rnabioco/aform-rs"
keywords = ["bioinformatics", "rna", "alignment", "stockholm", "tui"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "aform"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
ratatui-explorer = "0.2"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unicode-width = "0.2"

[profile.release]
lto = true
strip = true
