[package]
name = "aform-rs"
version = "0.1.0-alpha.12"
edition = "2024"
description = "TUI Stockholm multiple sequencing alignment viz/edit"
license = "MIT"
repository = "https://github.com/rnabioco/aform-rs"
keywords = ["bioinformatics", "rna", "alignment", "stockholm", "tui"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "aform"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.9"
dirs = "6"
thiserror = "2"
unicode-width = "0.2"
kodama = "0.3"
termbg = "0.6"
flate2 = "1.1"
strum = { version = "0.27", features = ["derive"] }

[profile.release]
lto = true
strip = true
